# stela-nubo

./: .gitignore  Cargo.toml  README.md
assets/models/player/: character.glb
assets/models/player-ship/: makoi.glb
assets/shaders/: particle.wgsl
assets/textures/: eye-green.xcf
src/: application.rs  destructible.rs  generation.rs  health.rs  input.rs  main.rs  menu.rs  player.rs  util.rs  weapon.rs
src/arena/: generation.rs  mod.rs
src/camera/: mod.rs
src/components/: health.rs  mod.rs  points.rs
src/effects/: explosion.rs  mod.rs
src/player/: input.rs  mod.rs
src/spawnable/: gun.rs  mod.rs
src/states/: game.rs  mod.rs
src/ui/: game_over.rs  main_menu.rs  mod.rs  overlay.rs  pause_menu.rs  victory.rs
