[package]
name = "stela-nubo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = "0.11.2"
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_xpbd_3d = "0.2.0"
leafwing-input-manager = "0.10.0"
noise = "0.8.2"
queues = "1.1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

